<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewEmail">

    <TextView
        android:id="@+id/textView"
        android:layout_width="73dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/sendTo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/subjectEditTxt"
        android:layout_width="362dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/subjectKey"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/userSpinner" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="130dp"
        android:layout_height="23dp"
        android:layout_marginTop="32dp"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="@+id/subjectEditTxt"
        app:layout_constraintTop_toBottomOf="@+id/subjectEditTxt" />

    <EditText
        android:id="@+id/messageMultiTxt"
        android:layout_width="345dp"
        android:layout_height="284dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15dp"
        android:text="@string/sendKey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageMultiTxt" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="44dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageMultiTxt" />

    <Spinner
        android:id="@+id/userSpinner"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>